scss/media-queries.scss
@media (max-width: 1300px) {
  #content{
    width: 70%;
  }
}

@media (max-width: 1000px) {
  #sidebar{
    width: 20%;
    padding-right: 0;
  }
  #content{
    width: 75%;
  }
}

@media (max-width: 900px) {
  #content.article{
    width: 80%;
  }
  #info-bar{
    width: 90%;
    padding: 0;
    position: relative;
    left: 20px;
    margin-bottom: 80px;
  }
  .related-post{
    width: 30%;
    height:100px;
    max-width: none;
    display: inline-block;
    margin:0 1% 30px 0;

    span{
      left: 0;
      bottom: 0px;
      top:auto;
      transform: translateY(120%);
    }
  }
  .info-link{
    width: 50%;
    margin-top: 20px;
  }
}

@media (max-width: 850px) and (min-width: 650px) {
  .content-block>span{
    padding: 5px 10px;
  }
  .content-block .date{
    position: relative;
    width: 100%;
    border-top: 1px solid #666;
    border-left: 0;
    margin-top: 5px;
    text-align: left;
    padding-left: 0;
  }
}
@media (max-width: 850px) {
  #content{
    width: 80%;
    margin-left: 0;
    padding-left: 20px;
  }
  #projects.column{
    .inner-column{
      height: auto;
    }
    .content-block{
      width: 100%;
      margin-bottom: 30px;
      &:nth-child(n+7){
        display: none;
      }
    }
  }
}
@media (max-width: 750px) {
  .tiles>a{
    width: 85%;
    margin-left: 0!important;
    margin-right: 0!important;
  }
}
@media (max-width: 650px) {
  #sidebar h1{
    display: none;
  }
  .column, #events.column, #projects.column{
    width: 50%;
    float: left;

    &:nth-of-type(2){
      float: right;
    }
  }
  .more-link{
    display: none;
  }
}
@media (max-width: 500px) {
  #sidebar{
    width: 100%;
    max-width: none;
  }
  #logo-link {
    display: block;
    float: left;
    width: 60px;
    margin: 10px 0 10px 10px;
  }
  #menu-button{
    display: block;
    text-align: center;
    font-weight: bold;
    cursor: pointer;
    border-bottom: 1px solid #222;
    background-color: rgba(255, 255, 255, 0.12);
    width: 150px;
    float: right;
    margin: 10px 0 0 0;
  }
  #links a, #menu-button{
    height: 44px;
    padding-top: 14px;
  }
  #links{
    border-top: 1px solid #666;
  }
  #links a{
    display: block;
    width: 50%;
    border-color:#666;
    border-top:0;
    padding-left: 20px;
    &:nth-child(odd){
      border-right: 1px solid #666;
    }
  }
  #menu-content{
    display: none;
  }
  #menu-content.open{
    display: block;
  }
  #social-sidebar{
    width: 100%;
  }
  #content{
    margin-top: 0px;
    width: 100%;
    padding: 0;
  }

  // single artist, event, or project pages
  #content.article, #container{
    width: 100%;
  }
  .article .text-content{
    padding: 20px;
  }

  // category pages ( artists, events, projects)
  .tiles>a{
    width: 100%;
  }
}

